k8s-haproxy-controller-deployment/haproxy-ingress-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: haproxy-ingress
  namespace: ingress-controller
  labels:
    app: haproxy-ingress
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    run: haproxy-ingress
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
  - name: stat
    port: 1936
    targetPort: stat
