k8s-haproxy-controller-deployment/haproxy-ingress-rules_no-ssl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "haproxy"
  name: shippy-ingress
  namespace: shippy-grpc
spec:
  rules:
  - host: shippy.example.com
    http:
      paths:
      - path: /ui
        backend:
          serviceName: client
          servicePort: 5000 
      - path: /getConsignment
        backend:
          serviceName: client
          servicePort: 5000
      - path: /getVessel
        backend:
          serviceName: client
          servicePort: 5000
      - path: /Vessel/GetVessel
        backend:
          serviceName: vessel
          servicePort: 50052
      - path: /Shipping/GetConsignment
        backend:
          serviceName: consignment
          servicePort: 50051
      - path: /Shipping/GetVesselForConsignment
        backend:
          serviceName: consignment
          servicePort: 50051
